# continuity-director

./: .comfyignore  .gitignore  .upload-check.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PUBLISHING.md  README.md  README_EN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  __init__.py  collaboration_core.py  continuity_core.py  environment_nodes.py  extended_nodes.py  lock_integrity_core.py  merge_hardening_core.py  nodes.py  orchestration_core.py  payload_governance_core.py  postprocess_core.py  production_core.py  production_quality_core.py  pyproject.toml  requirements.txt  runtime_core.py  runtime_hardening_core.py  storyboard_hardening_core.py  strict_json_core.py  validation_core.py  validation_hardening_core.py
.bootstrap/: archive-00.txt  archive-01.txt  archive-02.txt  archive-03.txt  archive-03a.rot13  archive-03b.rot13  archive-03c.rot13  archive-03d.rot13  archive-04.txt  archive-05.txt  archive-06.txt  archive-06a.rot13  archive-06b.rot13  archive-06c.rot13  archive-06d.rot13  archive-07a.rot13  archive-07b.rot13  archive-07c.rot13  archive-07d.rot13  archive-08.txt  part-00.txt  restore-error.txt  restore_source.py  trigger-v2.txt  trigger-v3.txt  trigger.txt  v080-patch-00.rot13  v080-patch-01.rot13  v080-patch-02.rot13  v080-patch-03a.rot13  v080-patch-03b.rot13  v080-patch-03c.rot13  v080-patch-03d.rev  v080-patch-04a.rev  v080-patch-04b.rev  v080-patch-04c.rev  v080-patch-04d.rev  v080-patch-05a.rev  v080-patch-05b.rev
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: ADMIN_SETUP.md  ADOPTION.md  ARCHITECTURE.md  BUG_AUDIT_v0.8.22.md  ECOSYSTEM.md  INTERFACE.md  ITERATION_LOG_v0.8.42.md  README.md  RELEASING.md  architecture.md  iterations-v0.2.md  iterations-v0.3.md  iterations-v0.4.md  iterations-v0.5.md  iterations-v0.6.md  iterations-v0.7.md  manifest-schema.md
examples/: character.json  collaboration-pipeline.json  project.json  (+8 more)
(+80 files in other folders)
